start of the thre.js manual from scratch

--- a/index.html
+++ b/index.html
@@ -7,6 +7,42 @@
     <title>Three.js Sandbox</title>
   </head>
   <body>
-    <script type="module" src="./main.js"></script>
+    <canvas id="c"></canvas>
+    <!-- <script type="module" src="./main.js"></script> -->
+    <script type="module">
+      import * as THREE from "three";
+      import { createCube } from "./models/cube";
+
+      function main() {
+        const canvas = document.querySelector("#c");
+        const renderer = new THREE.WebGL1Renderer({ antialias: true, canvas });
+
+        const fov = 75;
+        const aspect = 2;
+        const near = 0.1;
+        const far = 5;
+        const camera = new THREE.PerspectiveCamera(fov, aspect, near, far);
+
+        camera.position.z = 2;
+
+        const scene = new THREE.Scene();
+
+        // ADD CUBE
+        const boxWidth = 1;
+        const boxHeight = 1;
+        const boxDepth = 1;
+        const geometry = new THREE.BoxGeometry(boxWidth, boxHeight, boxDepth);
+
+        const material = new THREE.MeshBasicMaterial({ color: 0x44aa88 });
+
+        const cube = new THREE.Mesh(geometry, material);
+
+        scene.add(cube);
+
+        renderer.render(scene, camera);
+      }
+
+      main();
+    </script>
   </body>
 </html>
