--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <title>Three.js Sandbox</title>
   </head>
   <body>
-    <canvas id="c"></canvas>
+    <canvas id="c" style="height: 90vh; width: 90vw"></canvas>
     <!-- <script type="module" src="./main.js"></script> -->
     <script type="module">
       import * as THREE from "three";
-      import { createCube } from "./models/cube";
 
       function main() {
         const canvas = document.querySelector("#c");
@@ -27,19 +26,51 @@
 
         const scene = new THREE.Scene();
 
+        {
+          const color = 0xfffff;
+          const intensity = 3;
+          const light = new THREE.DirectionalLight(color, intensity);
+          light.position.set(-1, 2, 4);
+
+          scene.add(light);
+        }
         // ADD CUBE
         const boxWidth = 1;
         const boxHeight = 1;
         const boxDepth = 1;
         const geometry = new THREE.BoxGeometry(boxWidth, boxHeight, boxDepth);
 
-        const material = new THREE.MeshBasicMaterial({ color: 0x44aa88 });
+        function makeInstance(geometry, color, x) {
+          const material = new THREE.MeshPhongMaterial({ color });
 
-        const cube = new THREE.Mesh(geometry, material);
+          const cube = new THREE.Mesh(geometry, material);
+          scene.add(cube);
 
-        scene.add(cube);
+          cube.position.x = x;
+          return cube;
+        }
 
-        renderer.render(scene, camera);
+        const cubes = [
+          makeInstance(geometry, 0x44aa88, 0),
+          makeInstance(geometry, 0x8844aa, -2),
+          makeInstance(geometry, 0xaa8844, 2),
+        ];
+
+        function render(time) {
+          time *= 0.001;
+
+          cubes.forEach((cube, ndx) => {
+            const speed = 1 + ndx * 0.1;
+            const rot = time * speed;
+            cube.rotation.x = rot;
+            cube.rotation.y = rot;
+          });
+          renderer.render(scene, camera);
+
+          requestAnimationFrame(render);
+        }
+
+        requestAnimationFrame(render);
       }
 
       main();
