--- a/index.html
+++ b/index.html
@@ -7,73 +7,15 @@
     <title>Three.js Sandbox</title>
   </head>
   <body>
-    <canvas id="c" style="height: 90vh; width: 90vw"></canvas>
-    <!-- <script type="module" src="./main.js"></script> -->
-    <script type="module">
-      import * as THREE from "three";
-
-      function main() {
-        const canvas = document.querySelector("#c");
-        const renderer = new THREE.WebGL1Renderer({ antialias: true, canvas });
-
-        const fov = 75;
-        const aspect = 2;
-        const near = 0.1;
-        const far = 5;
-        const camera = new THREE.PerspectiveCamera(fov, aspect, near, far);
-
-        camera.position.z = 2;
-
-        const scene = new THREE.Scene();
-
-        {
-          const color = 0xfffff;
-          const intensity = 3;
-          const light = new THREE.DirectionalLight(color, intensity);
-          light.position.set(-1, 2, 4);
-
-          scene.add(light);
+    <canvas id="c"></canvas>
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://threejs.org/build/three.module.js"
         }
-        // ADD CUBE
-        const boxWidth = 1;
-        const boxHeight = 1;
-        const boxDepth = 1;
-        const geometry = new THREE.BoxGeometry(boxWidth, boxHeight, boxDepth);
-
-        function makeInstance(geometry, color, x) {
-          const material = new THREE.MeshPhongMaterial({ color });
-
-          const cube = new THREE.Mesh(geometry, material);
-          scene.add(cube);
-
-          cube.position.x = x;
-          return cube;
-        }
-
-        const cubes = [
-          makeInstance(geometry, 0x44aa88, 0),
-          makeInstance(geometry, 0x8844aa, -2),
-          makeInstance(geometry, 0xaa8844, 2),
-        ];
-
-        function render(time) {
-          time *= 0.001;
-
-          cubes.forEach((cube, ndx) => {
-            const speed = 1 + ndx * 0.1;
-            const rot = time * speed;
-            cube.rotation.x = rot;
-            cube.rotation.y = rot;
-          });
-          renderer.render(scene, camera);
-
-          requestAnimationFrame(render);
-        }
-
-        requestAnimationFrame(render);
       }
-
-      main();
     </script>
+
+    <script type="module" src="main.js"></script>
   </body>
 </html>
