--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
       }
     </script>
 
-    <script type="module" src="./PastExamples/scenegraph.js"></script>
+    <script type="module" src="./PastExamples/materials.js"></script>
   </body>
 </html>
