half of textures section in three.js manual

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
       }
     </script>
 
-    <script type="module" src="./PastExamples/materials.js"></script>
+    <script type="module" src="./PastExamples/textures.js"></script>
   </body>
 </html>
