--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <canvas id="c"></canvas>
+    <!-- <div id="loading">
+      <div class="progress">
+        <div class="progressbar"></div>
+      </div>
+    </div> -->
     <script type="importmap">
       {
         "imports": {
