complete first part of lights section. Can now drag camera around!!!

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
       }
     </script>
 
-    <script type="module" src="./PastExamples/textures.js"></script>
+    <script type="module" src="./PastExamples/lights.js"></script>
   </body>
 </html>
