setup gui for cameras part of three.js manual

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
       }
     </script>
 
-    <script type="module" src="./PastExamples/lights.js"></script>
+    <script type="module" src="./PastExamples/cameras.js"></script>
   </body>
 </html>
