--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
   </head>
   <body>
     <canvas id="c"></canvas>
-    <!-- <div id="loading">
-      <div class="progress">
-        <div class="progressbar"></div>
-      </div>
-    </div> -->
+    <div class="split">
+      <div id="view1" tabindex="1"></div>
+      <div id="view2" tabindex="2"></div>
+    </div>
     <script type="importmap">
       {
         "imports": {
